# Endpoint

./: .gitignore  .server_pids  CONTRIBUTING.md  README.md  SECURITY.md  monitor_logs.sh  package-lock.json  package.json  pnpm-lock.yaml  run_servers.sh  stop_servers.sh  troubleshoot_server.sh  tsconfig.json  turbo.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: main.md
apps/backend/: Cargo.toml  package.json
apps/backend/migrations/: 20250511025021_create_users_table.sql  20250511025308_create_collections_table.sql  20250511025821_create_requests_table.sql
apps/backend/src/: config.rs  db.rs  error.rs  main.rs
apps/backend/src/api/: mod.rs  state.rs
apps/backend/src/api/models/: http_model.rs  mod.rs
apps/backend/src/api/routes/: app_data.rs  health.rs  mod.rs
apps/backend/src/api/services/: http_client.rs
apps/backend/src/app_middleware/: auth.rs  mod.rs
apps/backend/src/handlers/: auth.rs  collection.rs  mod.rs  request.rs
apps/backend/src/models/: collection.rs  mod.rs  request.rs  user.rs
apps/backend/src/routes/: auth.rs  collection.rs  mod.rs  request.rs
apps/backend/src/utils/: http.rs
apps/tauri/: README.md  package.json  theme.module.css.d.ts  tsconfig.json
public/themes/: light.json
server/: main.py  requirements.txt
server/api/: __init__.py
server/core/: config.py  middleware.py
server/models/: schemas.py
server/services/: http_client.py
src/: App.css  App.tsx  main.tsx  preload-themes.ts
src-tauri/: Cargo.toml  sqlite.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: api-call.tsx  app-header.tsx  app-shell.tsx  app-sidebar-header.tsx  app-title.tsx  (+7 more)
(+121 files in other folders)
