[package]
name = "rust_backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenv = "0.15"
anyhow = "1"

# Optional: For database support (e.g., PostgreSQL)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
